--- a/Assignment 2 - Design Study/Design Study 4/html/Noise-Analysis_index.html
+++ b/Assignment 2 - Design Study/Design Study 4/html/Noise-Analysis_index.html
@@ -7,12 +7,12 @@
 <script>MathJax = {tex:{tags: 'ams', inlineMath:[['$','$'],]}, svg:{fontCache:'global'}};</script>
 <script type="text/javascript" id="MathJax-script" async  src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-svg.js"></script>
 </head><body><div id="top"><h1>Noise Analysis</h1></div>
-<h2>Table of contents</h2><ol><h2>Circuit schematic</h2>
+<h2>Table of contents</h2><ol><h2>Circuit Schematic</h2>
 <figure><img src="img/CS_noise.svg" alt="" style="width:600px">
 </figure>
 <h2>Netlist: CS_noise.cir</h2>
 <pre>"Noise Analysis"
-* C:\Users\maboa\Desktop\Structured Electronic Design\Structured_Electronic_Design\Assignment 2 - Design Study\Design Study 4\cir\CS_noise.asc
+* C:\Users\Ossama El Boustani\Workspace\Reposititories\Structured_Electronic_Design\Assignment 2 - Design Study\Design Study 4\cir\CS_noise.asc
 C1 N002 N001 {C_A}
 XU1 N002 0 out NM18_noise ID={ID} IG={IG} W={W} L={L}
 V1 N001 0 V value=0 dc=0 dcvar=0 noise=0
@@ -24,9 +24,9 @@ C2 N002 0 {C_F}
 </pre>
 <h2>Analysis</h2>
 <p>For the noise analysis of a complemantary parallel stage we keep the analysis simple by analyzing a CS stage instead. In order to achieve the same noise performance of the CS stage we must halve the width of each transistor and the quiescent operating current. However, since we will be using passive feedback, the noise performance degarades since the feedback capacitor appears as a shunt capacitor at the input.</p>
-<p>To set the gain of the amplifier at 2 we need the feedback capacitor to be twice smaller than the antenna capacitor. The Capacitor of the antenna is $C_A = 8.33 \times l pF = 8.33 \times 0.5 = 4.2 pF$. Therefore, the feedback capacitor is $C_f = 0.5 \times C_A = 2.1 pF$.</p>
-<p>For the CS stage, we know that we can get the optimum performance when $c_{iss} = C_A + C_F = 6.3 pF$. If we operate in the saturation region, we have $WL = c_{iss} \frac{3}{2} \frac{t_{ox}}{\epsilon_o \epsilon_{sio2}} = 1.12 e-9$. And the minimum $g_m$ is $g_m = 10.3 mS$. This results $F_T = 270 MHz$ and $f_l = 30 kHz$. This means that noise requirements are achievable for CS stage.</p>
-<p>We choose $L = 1.6 \mu m$ and $W = 700 \mu m$. And we consider a current $I_D = 10 mA$</p>
+<p>To set the gain of the amplifier at 2 we need the feedback capacitor to be twice smaller than the antenna capacitor. The Capacitor of the antenna is $C_A = 8.33 \times 10^{-12} \cdot l  = 8.33 \times 0.5 = 4.2 \text{ pF}$. Therefore, the feedback capacitor is $C_f = 0.5 \times C_A = 2.1\text{ pF}$.</p>
+<p>For the CS stage, we know that we can get the optimum performance when $c_{iss} = C_A + C_F = 6.3 \text{ pF}$. If we operate in the saturation region, we have $WL = c_{iss} \frac{3}{2} \frac{t_{ox}}{\epsilon_o \epsilon_{sio2}} = 1.12 \times 10^{-9}$. And the minimum $g_m$ is $g_m = 10.3 \text{ mS}$. This results $F_T = 270 \text{ MHz}$ and $f_l = 30 \text{ kHz}$. This means that noise requirements are achievable for CS stage.</p>
+<p>We choose $L = 1.6 \;\mu\text{m}$ and $W = 700 \;\mu\text{m}$. And we consider a current $I_D = 10 \text{ mA}$</p>
 <table><caption>Table: Element data of expanded netlist 'Noise Analysis'</caption>
 <tr><th class="left">RefDes</th><th class="left">Nodes</th><th class="left">Refs</th><th class="left">Model</th><th class="left">Param</th><th class="left">Symbolic</th><th class="left">Numeric</th></tr>
 <tr><td class="left">C1</td><td class = "left">N002 N001 </td><td class = "left"></td><td class = "left">C</td>
@@ -105,11 +105,11 @@ $$S_{in}=\frac{0.0006263 \left(5.901 \cdot 10^{-15} f + 5.501 \cdot 10^{-10}\rig
 <figure><img src="img/Inoise.svg" alt="" style="width:600px">
 </figure>
 <h2>Conclusion</h2>
-<p>We can conclude that the requirements have been met. The ouput noise power is below the noise floor $6.25 \times 10^{-18} (V^2 / Hz)$ and the cuttor frequency is $f_l = 100 kHz$. For the push-pull stage the same noise performance can be achieved for half the current and width values.</p>
+<p>We can conclude that the requirements have been met. The ouput noise power is below the noise floor $6.25 \times 10^{-18} \text{(V}^2 /\text{Hz)}$ and the cutoff frequency is $f_l = 100 \text{ kHz}$. For the push-pull stage the same noise performance can be achieved for half the current and width values.</p>
 <!-- INSERT --></ol>
 <div id="footnote">
 <p>Go to <a href="index.html">index</a></p>
 <p>SLiCAP: Symbolic Linear Circuit Analysis Program, Version 1.0 &copy 2009-2020 SLiCAP development team</p>
 <p>For documentation, examples, support, updates and courses please visit: <a href="http://www.analog-electronics.eu">analog-electronics.eu</a></p>
-<p>Last project update: 2020-12-08 18:05:51</p>
+<p>Last project update: 2020-12-08 20:51:13</p>
 </div></body></html>
