--- a/Assignment 2 - Design Study/html/Design Study 4 (Mohammed and Ossama)- html/Introduction-and-Requirements.html
+++ b/Assignment 2 - Design Study/html/Design Study 4 (Mohammed and Ossama)- html/Introduction-and-Requirements.html
@@ -8,14 +8,14 @@
 <script type="text/javascript" id="MathJax-script" async  src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-svg.js"></script>
 </head><body><div id="top"><h1>Introduction and Requirements</h1></div>
 <p>For this assignment, we consider a balanced CS stage with single loop feedback. Specifically, we consider a complementary parallel stage, i.e. push-pull stage in terms conventional analog design, with capacitive passive feedback loop.</p>
-<p>The maximum length of the antenna is $l= 0.5 \text{ m}$. Considering the maximum length, the noise floor is $P_n = 2.5 \times 10^{-17} \times 0.5^2 = 6.25 \times 10^{-18} (\text{V}^2 /\text{Hz})$ Furthermore, the flicker noise $P_{fn} = \frac{10^{-6}}{f} \times l^2 $. The corner frequency is $f_l =200 kHz$.  </p>
-<p>The active antenna is loaded with 50 $\Omega$ coaxial cable. Given a $1\text{ dB}$ compression level of 0 dBm at the output of the amplifier. This means an output power of 1 mW. Therefore, the output rms voltage is $V_o= \sqrt{P \cdot R_o} = \sqrt{1\;mW \cdot 50\;\Omega} = 0.2236\; V$. The output rms current is $I_o = V_o/R_o = 0.2236\; V / 50\;\Omega = 4.472\; mA$. From these values we get the peak voltage $V_p = \sqrt{2} \cdot 0.2236 = 316.2\; mV$ and the peak value of the current is $I_p = 6.324\; mA$. Since we are using output voltage feedback the output impedance of the amplifier is zero. Therefore, we insert a series resistance of $50 \Omega$, to obtain an ouput resistance of $50 \Omega$. This means that the we must double the ouput peak voltage $V_p = 632.4\; mV$, while the ouput current stays the same.</p>
-<p>The voltage gain of the amplifier is $A_v = V_{out}/V_{in} = Vo_{rms}/(0.45\times 0.5)$. Sinc we need two times the rms voltage of the CS stage withouut feedback, we get = $A_v = 2 \times 0.2236/(0.45\times 0.5) = 2$.</p>
-<p>Finally, the intermodulation products in the circuit bandwidth (10 kHz - 30 MHz), should be less than $-50 dBm$.</p>
+<p>The maximum length of the antenna is $l= 0.5 \text{ m}$. Considering the maximum length, the noise floor is $P_n = 2.5 \times 10^{-17} \times 0.5^2 = 6.25 \times 10^{-18} \text{ (V}^2 / \text{ Hz)}$ Furthermore, the flicker noise $P_{fn} = \frac{10^{-6}}{f} \times l^2 $. The corner frequency is $f_l =200 \text{ kHz}$.</p>
+<p>The active antenna is loaded with $50\;\Omega$ coaxial cable. Given a 1 dB compression level of 0 dBm at the output of the amplifier. This means an output power of 1 mW. Therefore, the output rms voltage is $V_o= \sqrt{P \cdot R_o} = \sqrt{1\text{ mW} \cdot 50\;\Omega} = 0.2236 \text{ V}$. The output rms current is $I_o = V_o/R_o = 0.2236 \text{ V} / 50\;\Omega = 4.472 \text{ mA}$. From these values we get the peak voltage $V_p = \sqrt{2} \cdot 0.2236 = 316.2 \text{ mV}$ and the peak value of the current is $I_p = 6.324 \text{ mA}$. Since we are using output voltage feedback the output impedance of the amplifier is zero. Therefore, we insert a series resistance of $50\;\Omega$, to obtain an ouput resistance of $50\;\Omega$. This means that the we must double the ouput peak voltage $V_p = 632.4\text{ mV}$, while the ouput current stays the same.</p>
+<p>The voltage gain of the amplifier is $A_v = V_{out}/V_{in} = Vo_{rms}/(0.45\times 0.5)$. Since we need two times the rms voltage of the CS stage withouut feedback, we get = $A_v = 2 \times 0.2236/(0.45\times 0.5) = 2$.</p>
+<p>Finally, the intermodulation products in the circuit bandwidth $\text{(10 kHz - 30 MHz)}$, should be less than $-50 \text{ dBm}$.</p>
 <!-- INSERT -->
 <div id="footnote">
 <p>Go to <a href="index.html">index</a></p>
 <p>SLiCAP: Symbolic Linear Circuit Analysis Program, Version 1.0 &copy 2009-2020 SLiCAP development team</p>
 <p>For documentation, examples, support, updates and courses please visit: <a href="http://www.analog-electronics.eu">analog-electronics.eu</a></p>
-<p>Last project update: 2020-12-07 00:05:33</p>
+<p>Last project update: 2020-12-08 20:51:13</p>
 </div></body></html>
