--- a/Assignment 2 - Design Study/html/Design Study 4 (Mohammed and Ossama)- html/Noise-Analysis_index.html
+++ b/Assignment 2 - Design Study/html/Design Study 4 (Mohammed and Ossama)- html/Noise-Analysis_index.html
@@ -7,7 +7,7 @@
 <script>MathJax = {tex:{tags: 'ams', inlineMath:[['$','$'],]}, svg:{fontCache:'global'}};</script>
 <script type="text/javascript" id="MathJax-script" async  src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-svg.js"></script>
 </head><body><div id="top"><h1>Noise Analysis</h1></div>
-<h2>Table of contents</h2><ol><h2>Circuit schematic</h2>
+<h2>Table of contents</h2><ol><h2>Circuit Schematic</h2>
 <figure><img src="img/CS_noise.svg" alt="" style="width:600px">
 </figure>
 <h2>Netlist: CS_noise.cir</h2>
@@ -24,22 +24,22 @@ C2 N002 0 {C_F}
 </pre>
 <h2>Analysis</h2>
 <p>For the noise analysis of a complemantary parallel stage we keep the analysis simple by analyzing a CS stage instead. In order to achieve the same noise performance of the CS stage we must halve the width of each transistor and the quiescent operating current. However, since we will be using passive feedback, the noise performance degarades since the feedback capacitor appears as a shunt capacitor at the input.</p>
-<p>To set the gain of the amplifier at 2 we need the feedback capacitor to be twice larger than the antenna capacitor. The Capacitor of the antenna is $C_A = 8.33 \times l pF = 8.33 \times 0.5 = 4.2 pF$. Therefore, the feedback capacitor is $C_f = 2 \times C_A = 8.33 pF$.</p>
-<p>For the CS stage, we know that we can get the optimum performance when $c_{iss} = C_A = 4.2 pF$. If we operate in the saturation region, we have $WL = c_{iss} \frac{3}{2} \frac{t_{ox}}{\epsilon_o \epsilon_{sio2}} = 7.48 e-10$. And the minimum $g_m$ is $g_m = 10.6 mS$. This results $F_T = 400 MHz$ and $f_l = 30 kHz$. This means that noise requirements are achievable for CS stage.</p>
-<p>We choose $L = 900 nm$ and $W = 830 \mu m$. And we consider the feedback capacitor $C_F = 2\times C_A = 8.4 pF$.</p>
+<p>To set the gain of the amplifier at 2 we need the feedback capacitor to be twice smaller than the antenna capacitor. The Capacitor of the antenna is $C_A = 8.33 \times 10^{-12} \cdot l  = 8.33 \times 0.5 = 4.2 \text{ pF}$. Therefore, the feedback capacitor is $C_f = 0.5 \times C_A = 2.1\text{ pF}$.</p>
+<p>For the CS stage, we know that we can get the optimum performance when $c_{iss} = C_A + C_F = 6.3 \text{ pF}$. If we operate in the saturation region, we have $WL = c_{iss} \frac{3}{2} \frac{t_{ox}}{\epsilon_o \epsilon_{sio2}} = 1.12 \times 10^{-9}$. And the minimum $g_m$ is $g_m = 10.3 \text{ mS}$. This results $F_T = 270 \text{ MHz}$ and $f_l = 30 \text{ kHz}$. This means that noise requirements are achievable for CS stage.</p>
+<p>We choose $L = 1.6 \;\mu\text{m}$ and $W = 700 \;\mu\text{m}$. And we consider a current $I_D = 10 \text{ mA}$</p>
 <table><caption>Table: Element data of expanded netlist 'Noise Analysis'</caption>
 <tr><th class="left">RefDes</th><th class="left">Nodes</th><th class="left">Refs</th><th class="left">Model</th><th class="left">Param</th><th class="left">Symbolic</th><th class="left">Numeric</th></tr>
 <tr><td class="left">C1</td><td class = "left">N002 N001 </td><td class = "left"></td><td class = "left">C</td>
 <td class="left">value</td><td class="left">$C_{A}$</td><td class="left">$4.2 \cdot 10^{-12}$</td></tr>
 <tr><td class="left">C2</td><td class = "left">N002 0 </td><td class = "left"></td><td class = "left">C</td>
-<td class="left">value</td><td class="left">$C_{F}$</td><td class="left">$8.4 \cdot 10^{-12}$</td></tr>
+<td class="left">value</td><td class="left">$C_{F}$</td><td class="left">$2.1 \cdot 10^{-12}$</td></tr>
 <tr><td class="left">F1_XU1</td><td class = "left">N002 0 10_XU1 0 </td><td class = "left"></td><td class = "left">F</td>
-<td class="left">value</td><td class="left">$\frac{s}{2 \pi f_{T XU1}}$</td><td class="left">$8.436 \cdot 10^{-11} s$</td></tr>
+<td class="left">value</td><td class="left">$\frac{s}{2 \pi f_{T XU1}}$</td><td class="left">$1.733 \cdot 10^{-10} s$</td></tr>
 <tr><td class="left">H1_XU1</td><td class = "left">N002 out 1_XU1 10_XU1 </td><td class = "left"></td><td class = "left">H</td>
-<td class="left">value</td><td class="left">$\frac{1}{g_{m XU1}}$</td><td class="left">$16.11$</td></tr>
+<td class="left">value</td><td class="left">$\frac{1}{g_{m XU1}}$</td><td class="left">$23.04$</td></tr>
 <tr><td class="left">I1_XU1</td><td class = "left">0 1_XU1 </td><td class = "left"></td><td class = "left">I</td>
 <td class="left">value</td><td class="left">$0$</td><td class="left">$0$</td></tr>
-<tr><td></td><td></td><td></td><td></td><td class="left">noise</td><td class="left">$\frac{4 T k \left(1 + \frac{f_{\ell XU1}}{f}\right)}{R_{N XU1}}$</td><td class="left">$9.125 \cdot 10^{-22} + \frac{1.837 \cdot 10^{-16}}{f}$</td></tr>
+<tr><td></td><td></td><td></td><td></td><td class="left">noise</td><td class="left">$\frac{4 T k \left(1 + \frac{f_{\ell XU1}}{f}\right)}{R_{N XU1}}$</td><td class="left">$6.428 \cdot 10^{-22} + \frac{5.992 \cdot 10^{-17}}{f}$</td></tr>
 <tr><td class="left">I2_XU1</td><td class = "left">N002 0 </td><td class = "left"></td><td class = "left">I</td>
 <td class="left">value</td><td class="left">$0$</td><td class="left">$0$</td></tr>
 <tr><td></td><td></td><td></td><td></td><td class="left">noise</td><td class="left">$2 IG q$</td><td class="left">$0$</td></tr>
@@ -55,21 +55,21 @@ C2 N002 0 {C_F}
 <tr><td class="left">$CGSO_{N18}$</td><td class="left">$3.0 \cdot 10^{-10}$</td><td class="left">$3.0 \cdot 10^{-10}$</td></tr>
 <tr><td class="left">$CJB_{0 N18}$</td><td class="left">$0.001$</td><td class="left">$0.001$</td></tr>
 <tr><td class="left">$C_{A}$</td><td class="left">$4.2 \cdot 10^{-12}$</td><td class="left">$4.2 \cdot 10^{-12}$</td></tr>
-<tr><td class="left">$C_{F}$</td><td class="left">$8.4 \cdot 10^{-12}$</td><td class="left">$8.4 \cdot 10^{-12}$</td></tr>
+<tr><td class="left">$C_{F}$</td><td class="left">$2.1 \cdot 10^{-12}$</td><td class="left">$2.1 \cdot 10^{-12}$</td></tr>
 <tr><td class="left">$C_{OX N18}$</td><td class="left">$\frac{\epsilon_{0} \epsilon_{SiO2}}{TOX_{N18}}$</td><td class="left">$0.008422$</td></tr>
 <tr><td class="left">$E_{CRIT N18}$</td><td class="left">$5.6 \cdot 10^{6}$</td><td class="left">$5.6 \cdot 10^{6}$</td></tr>
 <tr><td class="left">$ID$</td><td class="left">$0.01$</td><td class="left">$0.01$</td></tr>
 <tr><td class="left">$IG$</td><td class="left">$0$</td><td class="left">$0$</td></tr>
 <tr><td class="left">$I_{0 N18}$</td><td class="left">$2 C_{OX N18} N_{s N18} U_{T}^{2} u_{0 N18}$</td><td class="left">$6.413 \cdot 10^{-7}$</td></tr>
 <tr><td class="left">$KF_{N18}$</td><td class="left">$3.0 \cdot 10^{-25}$</td><td class="left">$3.0 \cdot 10^{-25}$</td></tr>
-<tr><td class="left">$L$</td><td class="left">$9.0 \cdot 10^{-7}$</td><td class="left">$9.0 \cdot 10^{-7}$</td></tr>
+<tr><td class="left">$L$</td><td class="left">$1.6 \cdot 10^{-6}$</td><td class="left">$1.6 \cdot 10^{-6}$</td></tr>
 <tr><td class="left">$LDS_{N18}$</td><td class="left">$1.8 \cdot 10^{-7}$</td><td class="left">$1.8 \cdot 10^{-7}$</td></tr>
 <tr><td class="left">$N_{s N18}$</td><td class="left">$1.35$</td><td class="left">$1.35$</td></tr>
 <tr><td class="left">$T$</td><td class="left">$300$</td><td class="left">$300.0$</td></tr>
 <tr><td class="left">$TOX_{N18}$</td><td class="left">$4.1 \cdot 10^{-9}$</td><td class="left">$4.1 \cdot 10^{-9}$</td></tr>
 <tr><td class="left">$\Theta_{N18}$</td><td class="left">$0.28$</td><td class="left">$0.28$</td></tr>
 <tr><td class="left">$U_{T}$</td><td class="left">$\frac{T k}{q}$</td><td class="left">$0.02585$</td></tr>
-<tr><td class="left">$W$</td><td class="left">$0.00083$</td><td class="left">$0.00083$</td></tr>
+<tr><td class="left">$W$</td><td class="left">$0.0007$</td><td class="left">$0.0007$</td></tr>
 <tr><td class="left">$c$</td><td class="left">$2.998 \cdot 10^{8}$</td><td class="left">$2.998 \cdot 10^{8}$</td></tr>
 <tr><td class="left">$\epsilon_{0}$</td><td class="left">$\frac{1}{c^{2} \mu_{0}}$</td><td class="left">$8.854 \cdot 10^{-12}$</td></tr>
 <tr><td class="left">$\epsilon_{SiO2}$</td><td class="left">$3.9$</td><td class="left">$3.9$</td></tr>
@@ -77,27 +77,27 @@ C2 N002 0 {C_F}
 <tr><td class="left">$\mu_{0}$</td><td class="left">$4.0 \cdot 10^{-7} \pi$</td><td class="left">$1.257 \cdot 10^{-6}$</td></tr>
 <tr><td class="left">$q$</td><td class="left">$1.602 \cdot 10^{-19}$</td><td class="left">$1.602 \cdot 10^{-19}$</td></tr>
 <tr><td class="left">$u_{0 N18}$</td><td class="left">$0.0422$</td><td class="left">$0.0422$</td></tr>
-<tr><td class="left">$IC_{CRIT XU1}$</td><td class="left">$\frac{1}{16 N_{s N18}^{2} U_{T}^{2} \left(\Theta_{N18} + \frac{1}{E_{CRIT N18} L}\right)^{2}}$</td><td class="left">$224.2$</td></tr>
-<tr><td class="left">$IC_{XU1}$</td><td class="left">$\frac{ID L}{I_{0 N18} W}$</td><td class="left">$16.91$</td></tr>
-<tr><td class="left">$R_{N XU1}$</td><td class="left">$\frac{IC_{XU1} + 1}{N_{s N18} g_{m XU1} \left(\frac{2 IC_{XU1}}{3} + \frac{1}{2}\right)}$</td><td class="left">$18.16$</td></tr>
-<tr><td class="left">$c_{db XU1}$</td><td class="left">$CJB_{0 N18} LDS_{N18} W$</td><td class="left">$1.494 \cdot 10^{-13}$</td></tr>
-<tr><td class="left">$c_{dg XU1}$</td><td class="left">$CGSO_{N18} W$</td><td class="left">$2.49 \cdot 10^{-13}$</td></tr>
-<tr><td class="left">$c_{gb XU1}$</td><td class="left">$2 CGBO_{N18} L + \frac{C_{OX N18} L W \left(N_{s N18} - 1\right)}{3 N_{s N18}}$</td><td class="left">$5.437 \cdot 10^{-13}$</td></tr>
-<tr><td class="left">$c_{gs XU1}$</td><td class="left">$CGSO_{N18} W + \frac{2 C_{OX N18} L W}{3}$</td><td class="left">$4.443 \cdot 10^{-12}$</td></tr>
-<tr><td class="left">$c_{iss XU1}$</td><td class="left">$c_{dg XU1} + c_{gb XU1} + c_{gs XU1}$</td><td class="left">$5.236 \cdot 10^{-12}$</td></tr>
-<tr><td class="left">$f_{T XU1}$</td><td class="left">$\frac{g_{m XU1}}{2 \pi c_{iss XU1}}$</td><td class="left">$1.887 \cdot 10^{9}$</td></tr>
-<tr><td class="left">$f_{\ell XU1}$</td><td class="left">$\frac{KF_{N18} R_{N XU1} g_{m XU1}^{2}}{4 C_{OX N18} L T W k}$</td><td class="left">$2.013 \cdot 10^{5}$</td></tr>
-<tr><td class="left">$g_{m XU1}$</td><td class="left">$\frac{ID}{N_{s N18} U_{T} \sqrt{IC_{XU1} \left(1 + \frac{IC_{XU1}}{IC_{CRIT XU1}}\right) + 0.5 \sqrt{IC_{XU1} \left(1 + \frac{IC_{XU1}}{IC_{CRIT XU1}}\right)} + 1}}$</td><td class="left">$0.06206$</td></tr>
+<tr><td class="left">$IC_{CRIT XU1}$</td><td class="left">$\frac{1}{16 N_{s N18}^{2} U_{T}^{2} \left(\Theta_{N18} + \frac{1}{E_{CRIT N18} L}\right)^{2}}$</td><td class="left">$334.6$</td></tr>
+<tr><td class="left">$IC_{XU1}$</td><td class="left">$\frac{ID L}{I_{0 N18} W}$</td><td class="left">$35.64$</td></tr>
+<tr><td class="left">$R_{N XU1}$</td><td class="left">$\frac{IC_{XU1} + 1}{N_{s N18} g_{m XU1} \left(\frac{2 IC_{XU1}}{3} + \frac{1}{2}\right)}$</td><td class="left">$25.77$</td></tr>
+<tr><td class="left">$c_{db XU1}$</td><td class="left">$CJB_{0 N18} LDS_{N18} W$</td><td class="left">$1.26 \cdot 10^{-13}$</td></tr>
+<tr><td class="left">$c_{dg XU1}$</td><td class="left">$CGSO_{N18} W$</td><td class="left">$2.1 \cdot 10^{-13}$</td></tr>
+<tr><td class="left">$c_{gb XU1}$</td><td class="left">$2 CGBO_{N18} L + \frac{C_{OX N18} L W \left(N_{s N18} - 1\right)}{3 N_{s N18}}$</td><td class="left">$8.152 \cdot 10^{-13}$</td></tr>
+<tr><td class="left">$c_{gs XU1}$</td><td class="left">$CGSO_{N18} W + \frac{2 C_{OX N18} L W}{3}$</td><td class="left">$6.499 \cdot 10^{-12}$</td></tr>
+<tr><td class="left">$c_{iss XU1}$</td><td class="left">$c_{dg XU1} + c_{gb XU1} + c_{gs XU1}$</td><td class="left">$7.524 \cdot 10^{-12}$</td></tr>
+<tr><td class="left">$f_{T XU1}$</td><td class="left">$\frac{g_{m XU1}}{2 \pi c_{iss XU1}}$</td><td class="left">$9.182 \cdot 10^{8}$</td></tr>
+<tr><td class="left">$f_{\ell XU1}$</td><td class="left">$\frac{KF_{N18} R_{N XU1} g_{m XU1}^{2}}{4 C_{OX N18} L T W k}$</td><td class="left">$9.322 \cdot 10^{4}$</td></tr>
+<tr><td class="left">$g_{m XU1}$</td><td class="left">$\frac{ID}{N_{s N18} U_{T} \sqrt{IC_{XU1} \left(1 + \frac{IC_{XU1}}{IC_{CRIT XU1}}\right) + 0.5 \sqrt{IC_{XU1} \left(1 + \frac{IC_{XU1}}{IC_{CRIT XU1}}\right)} + 1}}$</td><td class="left">$0.04341$</td></tr>
 </table>
 <h2>Numeric noise analysis results</h2>
 <h3>Detector-referred noise spectrum</h3>
-$$S_{out}=4.747 \cdot 10^{-19} + \frac{9.555 \cdot 10^{-14}}{f}\, \mathrm{\left[\frac{V^2}{Hz}\right]}$$
+$$S_{out}=1.643 \cdot 10^{-18} + \frac{1.531 \cdot 10^{-13}}{f}\, \mathrm{\left[\frac{V^2}{Hz}\right]}$$
 <h3>Source-referred noise spectrum</h3>
-$$S_{in}=\frac{0.00262 \left(1.631 \cdot 10^{-15} f + 3.282 \cdot 10^{-10}\right)}{f}\, \mathrm{\left[\frac{V^2}{Hz}\right]}$$
+$$S_{in}=\frac{0.0006263 \left(5.901 \cdot 10^{-15} f + 5.501 \cdot 10^{-10}\right)}{f}\, \mathrm{\left[\frac{V^2}{Hz}\right]}$$
 <h3>Contributions of individual noise sources</h3><table>
-<th colspan = "3" class="center">Noise source: I1_XU1</th><tr><td class="title">Spectral density:</td><td>$9.125 \cdot 10^{-22} + \frac{1.837 \cdot 10^{-16}}{f}$</td><td class="units">$\,\mathrm{\left[\frac{A^2}{Hz}\right]}$</td></tr>
-<tr><td class="title">Detector-referred:</td><td>$4.747 \cdot 10^{-19} + \frac{9.555 \cdot 10^{-14}}{f}$</td><td class="units">$\,\mathrm{\left[\frac{V^2}{Hz}\right]}$</td></tr>
-<tr><td class="title">Source-referred:</td><td>$\frac{0.00262 \left(1.631 \cdot 10^{-15} f + 3.282 \cdot 10^{-10}\right)}{f}$</td><td class="units">$\,\mathrm{\left[\frac{V^2}{Hz}\right]}$</td></tr>
+<th colspan = "3" class="center">Noise source: I1_XU1</th><tr><td class="title">Spectral density:</td><td>$6.428 \cdot 10^{-22} + \frac{5.992 \cdot 10^{-17}}{f}$</td><td class="units">$\,\mathrm{\left[\frac{A^2}{Hz}\right]}$</td></tr>
+<tr><td class="title">Detector-referred:</td><td>$1.643 \cdot 10^{-18} + \frac{1.531 \cdot 10^{-13}}{f}$</td><td class="units">$\,\mathrm{\left[\frac{V^2}{Hz}\right]}$</td></tr>
+<tr><td class="title">Source-referred:</td><td>$\frac{0.0006263 \left(5.901 \cdot 10^{-15} f + 5.501 \cdot 10^{-10}\right)}{f}$</td><td class="units">$\,\mathrm{\left[\frac{V^2}{Hz}\right]}$</td></tr>
 <th colspan = "3" class="center">Noise source: I2_XU1</th><tr><td class="title">Spectral density:</td><td>$0$</td><td class="units">$\,\mathrm{\left[\frac{A^2}{Hz}\right]}$</td></tr>
 <tr><td class="title">Detector-referred:</td><td>$0$</td><td class="units">$\,\mathrm{\left[\frac{V^2}{Hz}\right]}$</td></tr>
 <tr><td class="title">Source-referred:</td><td>$0$</td><td class="units">$\,\mathrm{\left[\frac{V^2}{Hz}\right]}$</td></tr>
@@ -105,11 +105,11 @@ $$S_{in}=\frac{0.00262 \left(1.631 \cdot 10^{-15} f + 3.282 \cdot 10^{-10}\right
 <figure><img src="img/Inoise.svg" alt="" style="width:600px">
 </figure>
 <h2>Conclusion</h2>
-<p>We can conclude that the requirements have been met. The noise floor is above $6.25 \times 10^{-18} (V^2 / Hz)$ and the cuttor frequency is $f_l = 200 kHz$. For the push-pull stage the same noise performance can be achieved for half the current and width values.</p>
+<p>We can conclude that the requirements have been met. The ouput noise power is below the noise floor $6.25 \times 10^{-18} \text{(V}^2 /\text{Hz)}$ and the cutoff frequency is $f_l = 100 \text{ kHz}$. For the push-pull stage the same noise performance can be achieved for half the current and width values.</p>
 <!-- INSERT --></ol>
 <div id="footnote">
 <p>Go to <a href="index.html">index</a></p>
 <p>SLiCAP: Symbolic Linear Circuit Analysis Program, Version 1.0 &copy 2009-2020 SLiCAP development team</p>
 <p>For documentation, examples, support, updates and courses please visit: <a href="http://www.analog-electronics.eu">analog-electronics.eu</a></p>
-<p>Last project update: 2020-12-07 00:05:33</p>
+<p>Last project update: 2020-12-08 20:51:13</p>
 </div></body></html>
