--- a/Assignment 2 - Design Study/html/Design Study 4 (Mohammed and Ossama)- html/index.html
+++ b/Assignment 2 - Design Study/html/Design Study 4 (Mohammed and Ossama)- html/index.html
@@ -7,10 +7,10 @@
 <script>MathJax = {tex:{tags: 'ams', inlineMath:[['$','$'],]}, svg:{fontCache:'global'}};</script>
 <script type="text/javascript" id="MathJax-script" async  src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-svg.js"></script>
 </head><body><div id="top"><h1>Balanced single loop feedback</h1></div>
-<h2>Table of contents</h2><ol><li><a href="Introduction-and-Requirements.html">Introduction and Requirements</a></li><li><a href="Noise-Analysis_index.html">Noise Analysis</a></li><li><a href="Small-signal-behavoir_index.html">Small-signal behavoir</a></li><!-- INSERT --></ol>
+<h2>Table of contents</h2><ol><li><a href="Introduction-and-Requirements.html">Introduction and Requirements</a></li><li><a href="Noise-Analysis_index.html">Noise Analysis</a></li><li><a href="Small-Signal-Dynamic-Behaviour_index.html">Small Signal Dynamic Behaviour</a></li><li><a href="Output-Drive_index.html">Output Drive</a></li><!-- INSERT --></ol>
 <div id="footnote">
 <p>Go to <a href="index.html">index</a></p>
 <p>SLiCAP: Symbolic Linear Circuit Analysis Program, Version 1.0 &copy 2009-2020 SLiCAP development team</p>
 <p>For documentation, examples, support, updates and courses please visit: <a href="http://www.analog-electronics.eu">analog-electronics.eu</a></p>
-<p>Last project update: 2020-12-07 00:05:33</p>
+<p>Last project update: 2020-12-08 20:51:13</p>
 </div></body></html>
